feat(server): add ReactFlightWebpackLoader, fix #1

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="Server Components Boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <title>Server Components Boilerplate</title>
   </head>
   <body>
